styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;800;900&display=swap");

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: Roboto, sans-serif;
  margin: 0 auto;
  padding: 2.5% 30%;
  display: flex;
  flex-direction: column;
  gap: 64px;
}

div.buttons {
  display: flex;
  justify-content: space-between;
  gap: 16px;
}

div.buttons button {
  color: white;
  background-color: rgb(28, 176, 246);
  padding: 2.5% 0;
  font-size: 32px;
  width: 100%;
  text-align: center;
  border: 2px solid rgb(28, 176, 246);
  border-radius: 16px;
  box-shadow: 0px 3px 3px 0px rgba(24, 153, 214, 0.3);
  margin: 0 0 3px;
}

div.buttons button:hover,
div.buttons button:focus {
  color: rgb(28, 176, 246);
  background-color: white;
  border: 2px solid rgb(28, 176, 246);
}

div.buttons button:active {
  box-shadow: none;
  margin: 3px 0 0;
}

div.buttons .resetButton {
  display: none;
}

div.gamePreview {
  display: flex;
  flex-direction: column;
  gap: 32px;
}

div.picks {
  display: flex;
  justify-content: center;
  gap: 16px;
}

div.indicatorTable {
  border: 8px solid rgb(28, 176, 246);
  box-shadow: 0px 3px 3px 0px rgba(24, 153, 214, 0.3);
  border-radius: 16px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

i[class^="fa"] {
  font-size: 64px;
  padding: 15%;
}

div.pickTable {
  padding: 2.5%;
  flex-basis: 30%;
  font-size: 16px;
}

div.pickResult {
  border: none;
  box-shadow: none;
  font-size: 24px;
  text-align: center;
}

div.score {
  display: flex;
  justify-content: center;
  gap: 32px;
}

p.scoreLabel {
  font-size: 24px;
}

div.scoreTable {
  flex-basis: 50%;
  padding: 5%;
}

p.scoreValue {
  font-size: 128px;
}

div.result {
  display: none;
}

p.gameResultValue {
  border: 8px solid rgb(28, 176, 246);
  box-shadow: 0px 3px 3px 0px rgba(24, 153, 214, 0.3);
  border-radius: 16px;
  font-size: 64px;
  text-align: center;
  padding: 10%;
}

